--- a/introduction_css/app.css
+++ b/introduction_css/app.css
@@ -1,10 +1,16 @@
 body {
     background: url(https://images.unsplash.com/photo-1506689205310-0a29c388691c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 div {
     background: #3498db;
+    /* border-color: greenyellow;
+    border-width: 5px;
+    border-style: solid; */
+
+    border: greenyellow solid 2px;
 }
 
 p {
